corregir imagen deporte

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</h3>
 		</div>
 		<div class="caja">
-			<img src="img/deporte.PNG" width="200" height="200">
+			<img src="img/deporte.png" width="200" height="200">
 			<h3>
 				Plan deportista
 				<p>Optimizado para mejorar el rendimiento en la práctica deportiva. </p>
